# FastGen

./: .gitignore  README.md  pyproject.toml
fastgen/: main.py
fastgen/core/: cli_manager.py  project_manager.py  setup_project.py  template_manager.py
fastgen/utils/: template_loader.py
templates/: basic_dart.yaml  basic_python.yaml  fastapi.yaml  php_web.yaml
